--- a/个人博客建设/mulu/备忘录/index.html
+++ b/个人博客建设/mulu/备忘录/index.html
@@ -6,6 +6,13 @@
     <title>Title</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
     <style>
+
+        body{
+            margin: 0;
+            height: 100%;
+            width: 100%;
+        }
+
         ul {
             padding: 0;
             margin: 0;
@@ -90,6 +97,11 @@
             color: green;
 
         }
+
+         a:hover{
+             cursor: pointer;
+             background: darkorange;
+         }
     </style>
 
 
