--- a/个人博客建设/mulu/文章/wenzhang.html
+++ b/个人博客建设/mulu/文章/wenzhang.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1440236_etxp9llkd7.css">
     <script src="gundongtiao.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
-        <style>
+    <style>
         /*样式初始化区域*/
         
         body {
-            margin: 0 0 0 0;
+            margin: 0 ;
+            width: 100%;
+            height: 100%;
         }
         
         ul {
@@ -623,7 +625,7 @@
 
 
                 <!--导航栏-->
-                <div class="daohanglan">
+                <div class="daohanglan visible-lg-*">
 
                     <div class="doahang1">
                         <div id="gotop" class="top">
