--- a/个人博客建设/mulu/留言/liuyan.html
+++ b/个人博客建设/mulu/留言/liuyan.html
@@ -9,6 +9,8 @@
     <style>
         body {
             margin: 0;
+            height: 100%;
+            width: 100%;
         }
         
         ul {
