--- a/个人博客建设/mulu/shouye.html
+++ b/个人博客建设/mulu/shouye.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <title>首页</title>
-    <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <style>
         body {
             margin: 0 0 0 0;
+            width: 100%;
+            height: 100%;
         }
         
         a {
@@ -292,11 +292,5 @@
             }
         };
     </script>
-
-
-
 </body>
-
-
-
 </html>
