--- a/个人博客建设/mulu/关于我/guanyu.html
+++ b/个人博客建设/mulu/关于我/guanyu.html
@@ -11,6 +11,8 @@
         /*样式初始化*/
         body {
             margin: 0;
+            width: 100%;
+            height: 100%;
         }
         
         ul {
