--- a/个人博客建设/mulu/动态/dongtai.html
+++ b/个人博客建设/mulu/动态/dongtai.html
@@ -9,6 +9,8 @@
     <style>
         body {
             margin: 0;
+            width: 100%;
+            height: 100%;
         }
         
         ul {
