--- a/个人博客建设/mulu/购物车案例/gowuche.html
+++ b/个人博客建设/mulu/购物车案例/gowuche.html
@@ -6,6 +6,11 @@
     <title>vue购物车案列</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
     <style>
+        body{
+            margin: 0;
+            width: 100%;
+            height: 100%;
+        }
         table,
         tr,
         td {
