--- a/个人博客建设/mulu/文章/wenzhang.html
+++ b/个人博客建设/mulu/文章/wenzhang.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>文章</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1440236_etxp9llkd7.css">
-    <script src="gundongtiao.js"></script>
+    <script src="../gundongtiao.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
     <style>
         /*样式初始化区域*/
@@ -892,12 +892,22 @@
                 }, {
                     title: '简易版的备忘录vue小实战',
                     msg_url: './images/4.jpg',
-                    content_wen:'主要设计模式：在页面不刷新的情况下对后台传过来的数据进行筛选，根据不同转态进行无缝切换',
+                    content_wen:'主要设计模式：在页面不刷新的情况下对后台传过来的数据进行筛选，根据不同状态进行无缝切换',
                     year: '2020',
                     month: '01',
                     day: '14',
                     zhuan: '../备忘录/index.html',
                     kind:'网站开发'
+
+                }, {
+                    title: 'linux常用命令集合',
+                    msg_url: './images/5.jpg',
+                    content_wen:'最近都在和Linux打交道，感觉还不错。我觉得Linux相比windows比较麻烦的就是很多东西都要用命令来控制，当然，这也是很多人喜欢linux的原因，比较短小但却功能强大。我将我了解到的命令列举一下，仅供大家参考：',
+                    year: '2020',
+                    month: '01',
+                    day: '15',
+                    zhuan: '../linux常用指令/index.html',
+                    kind:'操作系统'
 
                 },
 
