--- a/个人博客建设/mulu/易用性测试/yiyongx.html
+++ b/个人博客建设/mulu/易用性测试/yiyongx.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>易用性测试讲解</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1440236_etxp9llkd7.css">
-    <script src="gundongtiao.js"></script>
+    <script src="../gundongtiao.js"></script>
     <style>
         /*样式初始化区域*/
         
