--- a/个人博客建设/mulu/关于我/guanyu.html
+++ b/个人博客建设/mulu/关于我/guanyu.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>关于我</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1440236_srd9nc3esze.css">
-    <script src="gundongtiao.js"></script>
+    <script src="../gundongtiao.js"></script>
     <style>
 
         /*样式初始化*/
