--- a/个人博客建设/mulu/动态/dongtai.html
+++ b/个人博客建设/mulu/动态/dongtai.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>动态</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1440236_82r7g9ybfkv.css">
-    <script src="gundongtiao.js"></script>
+    <script src="../gundongtiao.js"></script>
     <style>
         body {
             margin: 0;
