--- a/个人博客建设/mulu/留言/liuyan.html
+++ b/个人博客建设/mulu/留言/liuyan.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>留言板</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1440236_srd9nc3esze.css">
-    <script src="gundongtiao.js"></script>
+    <script src="../gundongtiao.js"></script>
     <style>
         body {
             margin: 0;
