增加内容跟修改模板

--- a/个人博客建设/mulu/动态/dongtai.html
+++ b/个人博客建设/mulu/动态/dongtai.html
@@ -315,6 +315,15 @@
 
         <div class="demo1">
                 <ul class="list">
+                    <li>
+                        <div class="liuyan1">
+                            <span class="date">2020.1.15</span>
+                            <div class="neir">
+                                <p>如果说学历重要的话，不如说能力比较重要，毕竟企业不是要的证书，而是能力</p>
+                            </div>
+                        </div>
+                        <i class="iconfont"></i>
+                    </li>
 
                     <li>
                         <div class="liuyan">
