增加内容跟修改模板

--- a/个人博客建设/mulu/购物车案例/gowuche.html
+++ b/个人博客建设/mulu/购物车案例/gowuche.html
@@ -23,6 +23,10 @@
             /*火狐去掉滚动条*/
             scrollbar-width: none;
         }
+
+        #add::-webkit-scrollbar {
+            display: none;
+        }
         
         #add h1 {
             text-align: center;
@@ -35,14 +39,7 @@
             width: 50px;
             height: 50px;
         }
-        
-        .sun_div {
-            border-bottom: 1px solid aliceblue;
-            border-right: 1px solid aliceblue;
-            border-left: 1px solid aliceblue;
-            height: 50px;
-            line-height: 50px;
-        }
+
 
         .mynew{
             text-align: center;
