增加内容跟修改模板

--- a/个人博客建设/mulu/文章/wenzhang.html
+++ b/个人博客建设/mulu/文章/wenzhang.html
@@ -756,7 +756,7 @@ var vml = new Vue({
       }
 
       this.data_tsxt = this.mydataa.filter(function (item) {
-        return item.title.includes(_this.chauxun);
+        return item.title.includes((_this.chauxun).trim()) || item.kind.includes((_this.chauxun).trim());
       });
       console.log(this.data_tsxt);
       this.chauxun = '';
