--- a/blogger/mulu/压力测试/ylce.html
+++ b/blogger/mulu/压力测试/ylce.html
@@ -35,7 +35,7 @@
         }
         
         .demo {
-            margin: 0 auto;
+            margin: auto;
             width: 100%;
         }
 
