增加内容跟修改模板

--- a/blogger/mulu/压力测试/ylce.html
+++ b/blogger/mulu/压力测试/ylce.html
@@ -37,10 +37,11 @@
         .demo {
             margin: auto;
             width: 100%;
+            height: 100%;
         }
 
         .demo:before {
-            content: ' ';
+            content:"";
             position: fixed;
             z-index: -1;
             top: 0;
