--- a/blogger/mulu/压力测试/ylce.html
+++ b/blogger/mulu/压力测试/ylce.html
@@ -35,6 +35,7 @@
         }
         
         .demo {
+            display: block;
             margin: auto;
             width: 100%;
             height: 100%;
@@ -48,7 +49,6 @@
             right: 0;
             bottom: 0;
             left: 0;
-            /*background:#a4daff ;*/
             background-image: url("./images/3.jpg");
             background-size: cover;
             background-position:center ;
@@ -140,11 +140,10 @@
         /*内容区域*/
         
         .demo1 {
-            position: relative;
+
             padding-top: 80px;
             max-width: 1280px;
-            margin-left: auto;
-            margin-right: auto;
+            margin: auto;
             background: #fff;
             border: 1px solid #cccccc;
             height: 100%;
