--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -67,7 +67,7 @@
         }
         
         .libiao {
-            width: 1280px;
+            max-width: 1280px;
             margin-left: auto;
             margin-right: auto;
             position: relative;
