--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -59,7 +59,7 @@
         }
         
         .libiao {
-            width: 1280px;
+            max-width: 1280px;
             margin-left: auto;
             margin-right: auto;
             position: relative;
@@ -215,7 +215,7 @@
         
         .dsi {
             position: relative;
-            width: 1280px;
+            max-width: 1280px;
             height: 100px;
             margin: 0 auto;
             background: #212220;
