--- a/blogger/mulu/文章/wenzhang.html
+++ b/blogger/mulu/文章/wenzhang.html
@@ -138,7 +138,7 @@
         /*内容区域*/
         
         .jianrong {
-           min-width: 1263px;
+            min-width: 1263px;
             height: 100%;
             overflow: hidden;
         }
@@ -486,9 +486,9 @@
         
         .dsi {
             position: relative;
-            max-width: 1280px;
+           max-width: 1280px;
             height: 100px;
-            margin: 0 auto;
+            margin:auto;
             background: #212220;
             text-align: center;
         }
@@ -721,14 +721,12 @@
                     <div class="iconfont icon-weixin"></div>
                     <div class="iconfont icon-weibo"></div>
                 </div>
-
                 <p>Copyright © 2019 - 赣ICP备9678122号, All Rights Reserved Powered By 从小就疯了 1.0.0</p>
-
             </div>
-
         </div>
 
     </div>
+
 
     <script>
         "use strict";
@@ -883,9 +881,6 @@
             watch: { //数据监听
             }
         });
-
-
-
     </script>
 
 </body>
