--- a/blogger/mulu/linux常用指令/index.html
+++ b/blogger/mulu/linux常用指令/index.html
@@ -66,7 +66,7 @@
         }
         
         .libiao {
-            width: 1280px;
+            max-width: 1280px;
             margin-left: auto;
             margin-right: auto;
             position: relative;
@@ -311,7 +311,7 @@
         
         .dsi {
             position: relative;
-            width: 1280px;
+            max-width: 1280px;
             height: 100px;
             margin: 0 auto;
             background: #212220;
