增加内容跟修改模板

--- a/blogger/mulu/linux常用指令/index.html
+++ b/blogger/mulu/linux常用指令/index.html
@@ -274,7 +274,7 @@
         }
         
         .tsxi-01 {
-            width: 1280px;
+            max-width: 1280px;
             height: 100px;
             border-top: 1px solid #cccccc;
             background: #fff;
