--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -215,7 +215,7 @@
         
         .dsi {
             position: relative;
-            max-width: 1280px;
+            width: 1280px;
             height: 100px;
             margin: 0 auto;
             background: #212220;
