增加内容跟修改模板

--- a/blogger/mulu/文章/wenzhang.html
+++ b/blogger/mulu/文章/wenzhang.html
@@ -486,7 +486,7 @@
         
         .dsi {
             position: relative;
-           max-width: 1280px;
+           width: 1280px;
             height: 100px;
             margin:auto;
             background: #212220;
