增加内容跟修改模板

--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -316,6 +316,17 @@
         <div class="demo1">
                 <ul class="list">
                     <li>
+                        <div class="liuyan">
+                            <span class="date">2020.01.16</span>
+                            <div class="neir">
+                                <p>修改模板，修改bug，修到头晕</p>
+                            </div>
+                        </div>
+                        <i class="iconfont"></i>
+
+                    </li>
+
+                    <li>
                         <div class="liuyan1">
                             <span class="date">2020.1.15</span>
                             <div class="neir">
