增加内容跟修改模板

--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -169,6 +169,7 @@
             border: 2px solid #f2f2f2;
             left: 20px;
             top: 30px;
+            background: green;
         }
         
         .liuyan1 {
@@ -177,6 +178,7 @@
             height: 140px;
             border: 2px solid #f2f2f2;
             box-shadow: 0 0 200px inset aliceblue;
+            background: palegreen;
             right: 20px;
             top: 30px;
         }
