增加内容跟修改模板

--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -178,7 +178,7 @@
             height: 140px;
             border: 2px solid #f2f2f2;
             box-shadow: 0 0 200px inset aliceblue;
-            background: palegreen;
+            background: green;
             right: 20px;
             top: 30px;
         }
@@ -201,6 +201,7 @@
             height: 100px;
             box-shadow: 0 0 100px inset white;
             margin: auto;
+            background: palegreen;
         }
         
         .neir p {
