增加内容跟修改模板

--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -169,7 +169,7 @@
             border: 2px solid #f2f2f2;
             left: 20px;
             top: 30px;
-            background: green;
+            background: blanchedalmond;
         }
         
         .liuyan1 {
@@ -178,7 +178,7 @@
             height: 140px;
             border: 2px solid #f2f2f2;
             box-shadow: 0 0 200px inset aliceblue;
-            background: green;
+            background:blanchedalmond ;
             right: 20px;
             top: 30px;
         }
