增加内容跟修改模板

--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -165,7 +165,7 @@
             position: absolute;
             width: 400px;
             height: 140px;
-            box-shadow: 0 0 1000px inset aliceblue;
+            /*box-shadow: 0 0 1000px inset aliceblue;*/
             border: 2px solid #f2f2f2;
             left: 20px;
             top: 30px;
@@ -177,7 +177,7 @@
             width: 400px;
             height: 140px;
             border: 2px solid #f2f2f2;
-            box-shadow: 0 0 200px inset aliceblue;
+            /*box-shadow: 0 0 200px inset aliceblue;*/
             background:blanchedalmond ;
             right: 20px;
             top: 30px;
