增加内容跟修改模板

--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -165,7 +165,7 @@
             position: absolute;
             width: 400px;
             height: 140px;
-            border: 2px solid #f2f2f2;
+            border: 2px solid #ccc;
             left: 20px;
             top: 30px;
             background: aliceblue;
@@ -175,7 +175,7 @@
             position: absolute;
             width: 400px;
             height: 140px;
-            border: 2px solid #f2f2f2;
+            border: 2px solid #cccccc;
             background:aliceblue;
             right: 20px;
             top: 30px;
