--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -320,7 +320,7 @@
                         <div class="liuyan">
                             <span class="date">2020.01.16</span>
                             <div class="neir">
-                                <p>只要坚持，就一定会有所收获！不管什么，直观努力就是了</p>
+                                <p>只要坚持，就一定会有所收获！不管什么，努力就是了</p>
                             </div>
                         </div>
                         <i class="iconfont"></i>
