--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -216,7 +216,7 @@
         
         .dsi {
             position: relative;
-            width: 1280px;
+            max-width: 1280px;
             height: 100px;
             margin: 0 auto;
             background: #212220;
