增加内容跟修改模板

--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -324,8 +324,8 @@
         
         .dsi {
             position: relative;
-            width: 1280px;
-            height: 100px;
+            max-width: 1280px;
+            min-height: 100px;
             margin: 0 auto;
             background: #212220;
             text-align: center;
@@ -433,7 +433,7 @@
 
                     <div class="tome">
                         <span>09</span>
-                        <span>12月</span>
+                        <span>12</span>
                         <span>2019</span>
                     </div>
 
