增加内容跟修改模板

--- a/blogger/mulu/文章/wenzhang.html
+++ b/blogger/mulu/文章/wenzhang.html
@@ -486,8 +486,8 @@
         
         .dsi {
             position: relative;
-           width: 1280px;
-            height: 100px;
+            max-width: 1280px;
+            min-height: 100px;
             margin:auto;
             background: #212220;
             text-align: center;
