--- a/blogger/mulu/linux常用指令/index.html
+++ b/blogger/mulu/linux常用指令/index.html
@@ -311,8 +311,8 @@
 
         .dsi {
             position: relative;
-            width: 1280px;
-            height: 100px;
+            max-width: 1280px;
+            min-height: 100px;
             margin: 0 auto;
             background: #212220;
             text-align: center;
