--- a/blogger/mulu/关于我/guanyu.html
+++ b/blogger/mulu/关于我/guanyu.html
@@ -190,7 +190,7 @@
         .dsi {
             position: relative;
             max-width: 1280px;
-            height: 100px;
+            min-height: 100px;
             margin: 0 auto;
             background: #212220;
             text-align: center;
