--- a/blogger/mulu/留言/liuyan.html
+++ b/blogger/mulu/留言/liuyan.html
@@ -265,7 +265,7 @@
         .dsi {
             position: relative;
             max-width: 1280px;
-            height: 100px;
+            min-height: 100px;
             margin: 0 auto;
             background: #212220;
             text-align: center;
