增加内容跟修改模板

--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -164,8 +164,8 @@
         
         .titer-01 {
             position: relative;
-            width: 1280px;
-            height: 85px;
+            max-width: 1280px;
+            min-height: 85px;
             line-height: 30px;
             padding: 5px 130px 5px 0;
             border-bottom: 1px solid #e8e9e7;
@@ -287,8 +287,8 @@
         }
         
         .tsxi-01 {
-            width: 1280px;
-            height: 100px;
+            max-width: 1280px;
+            min-height: 100px;
             border-top: 1px solid #cccccc;
             background: #fff;
             margin-top: 100px;
