增加内容跟修改模板

--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -137,7 +137,7 @@
         /*内容区域*/
 
         .jianrong{
-           min-width:1263px ;
+           max-width:1263px ;
             height: 100%;
             overflow: hidden;
         }
