--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -146,8 +146,7 @@
             position: relative;
             padding-top: 80px;
             max-width: 1280px;
-            margin-left: auto;
-            margin-right: auto;
+            margin: auto;
             background: #fff;
             border: 1px solid #cccccc;
             height: 100%;
