--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -147,6 +147,8 @@
             padding-top: 80px;
             max-width: 1280px;
             margin: auto;
+            left: auto;
+            right: auto;
             background: #fff;
             border: 1px solid #cccccc;
             height: 100%;
