--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -167,6 +167,7 @@
             position: relative;
             max-width: 1280px;
             min-height: 85px;
+            margin: auto;
             line-height: 30px;
             padding: 5px 130px 5px 0;
             border-bottom: 1px solid #e8e9e7;
