增加内容跟修改模板

--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -140,6 +140,7 @@
            max-width:1263px ;
             height: 100%;
             overflow: hidden;
+            margin: auto;
         }
         
         .demo1 {
