--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -229,7 +229,7 @@
         }
         
         .zhanshi-01 {
-            width: 1280px;
+            max-width: 1280px;
             background: #fff;
             margin: 0;
         }
