增加内容跟修改模板

--- a/blogger/mulu/shouye.html
+++ b/blogger/mulu/shouye.html
@@ -190,7 +190,7 @@
     <div class="demo">
 
         <div id="gotop" class="top">
-            <span class="sats">菜单栏在左上角点击打开即可</span>
+            <span class="sats">菜单栏在左上角点击打开即可!!!</span>
             <img src="images/2.jpg">
         </div>
 
