增加内容跟修改模板

--- a/blogger/mulu/linux常用指令/index.html
+++ b/blogger/mulu/linux常用指令/index.html
@@ -139,6 +139,7 @@
             max-width: 1263px;
             height: 100%;
             overflow: hidden;
+            margin: auto;
         }
         
         .demo1 {
@@ -225,7 +226,7 @@
         }
         
         .zhanshi-01 {
-            width: 1280px;
+            max-width: 1280px;
             background: #fff;
             margin: 0;
         }
