增加内容跟修改模板

--- a/blogger/mulu/文章/wenzhang.html
+++ b/blogger/mulu/文章/wenzhang.html
@@ -138,6 +138,7 @@
         /*内容区域*/
         
         .jianrong {
+            padding-top: 80px;
             max-width: 1273px;
             height: 100%;
             overflow: hidden;
@@ -146,7 +147,6 @@
         
         .demo1 {
             position: relative;
-            padding-top: 80px;
             max-width: 1290px;
             margin-left: auto;
             margin-right: auto;
@@ -317,8 +317,7 @@
         .daohanglan {
             position: absolute;
             right: 0;
-            top: 0;
-            padding-top: 80px;
+            top: 0px;
             width: 300px;
             float: right;
         }
