--- a/blogger/mulu/文章/wenzhang.html
+++ b/blogger/mulu/文章/wenzhang.html
@@ -881,6 +881,34 @@
             watch: { //数据监听
             }
         });
+
+         var tishiii=document.querySelector('.yqts');
+         var zhanshi=document.querySelector('.zhanshi');
+         var doahang=document.querySelector('.daohanglan');
+         function monitoring () {
+            var width=window.innerWidth
+              if (width<1300){
+                     tishiii.style.display='none';
+                    doahang.style.display='none';
+                    zhanshi.style.margin='auto';
+
+
+            }else if (width>=1300) {
+                doahang.style.display='block';
+                tishiii.style.display='block';
+                zhanshi.style.margin='0'
+            }
+
+        }
+
+          monitoring ()
+
+
+
+         window.onresize = function(){
+           monitoring ()
+
+         }
     </script>
 
 </body>
