--- a/blogger/mulu/http协议内容/http.html
+++ b/blogger/mulu/http协议内容/http.html
@@ -675,7 +675,28 @@
 
     </div>
 
+    <script>
+        var tishiii=document.querySelector('.yqts');
+                function monitoring () {
+                    var width=window.innerWidth
+                      if (width<1300){
+                             tishiii.style.display='none';
+                    }else if (width>=1300) {
+                        tishiii.style.display='block';
+                    }
 
+                }
+
+                  monitoring ();
+
+
+
+                window.onresize = function(){
+                   monitoring ();
+
+                }
+
+    </script>
 </body>
 
 </html>
