--- a/blogger/mulu/留言/liuyan.html
+++ b/blogger/mulu/留言/liuyan.html
@@ -6,6 +6,7 @@
     <title>留言板</title>
     <link rel="stylesheet" href="http://at.alicdn.com/t/font_1440236_srd9nc3esze.css">
     <script src="../gundongtiao.js"></script>
+    <script src="../reactive.js"></script>
     <style>
         body {
             margin: 0;
@@ -493,6 +494,31 @@
                 }, 500);
             };
         }();
+
+
+
+        var tishiii=document.querySelector('.yqts');
+                function monitoring () {
+                    var width=window.innerWidth
+                      if (width<1300){
+                             tishiii.style.display='none';
+                    }else if (width>=1300) {
+                        tishiii.style.display='block';
+                    }
+
+                }
+
+                  monitoring ();
+
+
+
+                window.onresize = function(){
+                   monitoring ();
+
+                };
+
+
+
     </script>
 
 
