增加内容跟修改模板

--- a/blogger/mulu/关于我/guanyu.html
+++ b/blogger/mulu/关于我/guanyu.html
@@ -292,7 +292,6 @@
                     <br><span>运用技术：纯手写scc  html  JavaScript</span>
                     <br><span>服务器：阿里云 Ubuntu  18.04 64位</span>
                     <br><span>用途：学习心得记录。</span>
-                    <br><span>目前手机端未布局，只适用电脑访问，兼容谷歌，火狐游览器</span>
                 </p>
 
                 <div class="lianxi">
@@ -354,9 +353,10 @@
 
     </div>
     <script>
+
         var tishiii=document.querySelector('.yqts');
                 function monitoring () {
-                    var width=window.innerWidth
+                    var width=window.innerWidth;
                       if (width<1300){
                              tishiii.style.display='none';
                     }else if (width>=1300) {
@@ -372,7 +372,7 @@
                 window.onresize = function(){
                    monitoring ();
 
-                }
+                };
 
     </script>
 
