--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -316,6 +316,19 @@
 
         <div class="demo1">
                 <ul class="list">
+
+                     <li>
+                        <div class="liuyan1">
+                            <span class="date">2020.01.19</span>
+                            <div class="neir">
+                                <p>如果最基础的都不会，那么你就完了！</p>
+                            </div>
+                        </div>
+                        <i class="iconfont"></i>
+
+                    </li>
+
+
                     <li>
                         <div class="liuyan">
                             <span class="date">2020.01.16</span>
