增加内容跟修改模板

--- a/blogger/mulu/文章/wenzhang.html
+++ b/blogger/mulu/文章/wenzhang.html
@@ -872,7 +872,20 @@
                     day: '15',
                     zhuan: '../linux常用指令/index.html',
                     kind: '操作系统'
-                }]
+                }, {
+                    title: '黑盒测试设计用例方法详解',
+                    msg_url: './images/6.png',
+                    content_wen: '黑盒测试也称功能测试，它是通过测试来检测每个功能是否都能正常使用。在测试中，把程序看作一个不能打开的黑盒子，在完全不考虑程序内部结构和内部特性的情况下，在程序接口进行测试，它只检查程序功能是否按照需求规格说明书的规定正常使用，程序是否能适当地接收输入数据而产生正确的输出信息。黑盒测试着眼于程序外部结构，不考虑内部逻辑结构，主要针对软件界面和软件功能进行测试。',
+                    year: '2020',
+                    month: '01',
+                    day: '17',
+                    zhuan: '../常见的黑盒测试方法/index.html',
+                    kind: '网站测试'
+                }
+
+
+
+                ]
             },
             filters: { //对数据进行操作
             },
