增加内容跟修改模板

--- a/blogger/mulu/常见的黑盒测试方法/index.html
+++ b/blogger/mulu/常见的黑盒测试方法/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>linux常用指令</title>
+    <title>黑盒测试设计用例方法</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1440236_etxp9llkd7.css">
     <script src="../gundongtiao.js"></script>
     <style>
@@ -46,7 +46,7 @@
             bottom: 0;
             left: 0;
             /*background:#a4daff ;*/
-            background-image: url("./images/3.jpg");
+            background-image: url("../images/3.jpg");
             background-size: cover;
             background-position: center;
         }
