增加内容跟修改模板

--- a/blogger/mulu/shouye.html
+++ b/blogger/mulu/shouye.html
@@ -296,8 +296,9 @@
         };
 
 
-        document.onkeydown = function(event) {
+       input.onkeydown = function(event) {
             var e = event || window.event
+            if (input.value=='') return;
             if (e && e.keyCode == 13) {
                window.location.href = "https://www.baidu.com/s?ie=utf-8&f=8&rsv_bp=1&rsv_idx=1&tn=baidu&wd=" + input.value;
             }
