--- a/blogger/mulu/常见的黑盒测试方法/index.html
+++ b/blogger/mulu/常见的黑盒测试方法/index.html
@@ -308,6 +308,8 @@
             width: 100%;
             height: 100px;
             background: #212220;
+            /*position: fixed;*/
+            /*bottom: 0;*/
         }
         
         .dsi {
