--- a/blogger/mulu/linux常用指令/index.html
+++ b/blogger/mulu/linux常用指令/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>linux常用指令</title>
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1440236_etxp9llkd7.css">
+    <link rel="stylesheet" href="../hint.css">
     <script src="../gundongtiao.js"></script>
     <style>
         /*样式初始化区域*/
@@ -302,59 +303,7 @@
             width: 700px;
             height: 340px;
         }
-        /*结尾，网站信息友情提示等*/
-        
-        .yqts {
-            width: 100%;
-            height: 100px;
-            background: #212220;
-        }
 
-        .dsi {
-            position: relative;
-            max-width: 1280px;
-            min-height: 100px;
-            margin: 0 auto;
-            background: #212220;
-            text-align: center;
-        }
-
-        .list1 {
-            display: flex;
-            background-color: #212220;
-            justify-content: center;
-            width: 250px;
-            height: 50px;
-            margin: 0 auto;
-        }
-
-        .dsi .list1 div {
-            width: 30px;
-            height: 30px;
-            border-radius: 50%;
-            margin: 10px;
-            font-size: 30px;
-            text-align: center;
-            line-height: 30px;
-            color: #565755;
-        }
-
-        .dsi p {
-            display: block;
-            color: #565755;
-        }
-
-        .top {
-            position: fixed;
-            right: 50px;
-            bottom: 100px;
-        }
-
-
-         .top:hover{
-
-             cursor:pointer
-         }
     </style>
 </head>
 
