增加内容跟修改模板

--- a/blogger/mulu/shouye.html
+++ b/blogger/mulu/shouye.html
@@ -225,7 +225,7 @@
         <div class="demo2">
             <ul>
                 <li><a href="shouye.html">首页</a></li>
-                <li><a href="文章/wenzhang.html">文章</a></li>
+                <li><a href="文章/article.html">文章</a></li>
                 <li><a href="动态/dongtai.html">动态</a></li>
                 <li><a href="留言/liuyan.html">留言板</a></li>
                 <li><a href="关于我/guanyu.html">关于</a></li>
