--- a/blogger/mulu/常见的黑盒测试方法/index.html
+++ b/blogger/mulu/常见的黑盒测试方法/index.html
@@ -335,7 +335,7 @@
                         </li>
 
                         <li>
-                            <a href="../文章/wenzhang.html">文章</a>
+                            <a href="../文章/article.html">文章</a>
                         </li>
 
                         <li>
@@ -568,7 +568,7 @@
                     </ul>
 
                     <div class="tsxi-01">
-                        <a href="../文章/wenzhang.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                        <a href="../文章/article.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                     </div>
 
