--- a/blogger/mulu/留言/liuyan.html
+++ b/blogger/mulu/留言/liuyan.html
@@ -276,7 +276,7 @@
                         </li>
 
                         <li>
-                            <a href="../文章/wenzhang.html">文章</a>
+                            <a href="../文章/article.html">文章</a>
                         </li>
 
                         <li>
