--- a/blogger/mulu/压力测试/ylce.html
+++ b/blogger/mulu/压力测试/ylce.html
@@ -353,7 +353,7 @@
                         </li>
 
                         <li>
-                            <a href="../文章/wenzhang.html">文章</a>
+                            <a href="../文章/article.html">文章</a>
                         </li>
 
                         <li>
@@ -504,7 +504,7 @@
 
 
                 <div class="tsxi-01">
-                    <a href="../文章/wenzhang.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                    <a href="../文章/article.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                 </div>
 
