--- a/blogger/mulu/留言/liuyan.html
+++ b/blogger/mulu/留言/liuyan.html
@@ -41,7 +41,7 @@
             bottom: 0;
             left: 0;
             /*background:#a4daff ;*/
-            background-image: url("./images/3.jpg");
+            background-image: url("../images/3.jpg");
             background-size: cover;
             background-position:center ;
 
@@ -138,6 +138,7 @@
             background: rgb(0, 0, 0, 0);
             overflow: auto;
             overflow-x: hidden;
+            padding-top:30px ;
         }
         
         .demo1::-webkit-scrollbar {
