--- a/blogger/mulu/http协议内容/http.html
+++ b/blogger/mulu/http协议内容/http.html
@@ -48,7 +48,7 @@
             bottom: 0;
             left: 0;
             /*background:#a4daff ;*/
-            background-image: url("./images/3.jpg");
+            background-image: url("../images/3.jpg");
             background-size: cover;
             background-position: center;
         }
@@ -141,6 +141,7 @@
             min-width: 1263px;
             height: 100%;
             overflow: hidden;
+            margin-top: 90px;
         }
         
         .demo1 {
