--- a/blogger/mulu/关于我/guanyu.html
+++ b/blogger/mulu/关于我/guanyu.html
@@ -42,7 +42,7 @@
             bottom: 0;
             left: 0;
             /*background:#a4daff ;*/
-            background-image: url("./images/3.jpg");
+            background-image: url("../images/3.jpg");
             background-size: cover;
             background-position:center ;
 
@@ -137,13 +137,14 @@
         
         .demo1 {
             position: relative;
-            margin-top: 60px;
+            margin-top: 90px;
             max-width: 1280px;
             margin-left: auto;
             margin-right: auto;
             background: white;
             overflow: auto;
             scrollbar-width: none;
+
         }
         
         .demo1::-webkit-scrollbar {
@@ -243,6 +244,9 @@
                     <br><span>服务器：阿里云 Ubuntu  18.04 64位</span>
                     <br><span>用途：学习心得记录。</span>
                 </p>
+
+
+
 
                 <div class="lianxi">
                     <p>以下联系方式可以联系到我</p>
