--- a/blogger/mulu/压力测试/ylce.html
+++ b/blogger/mulu/压力测试/ylce.html
@@ -50,7 +50,7 @@
             right: 0;
             bottom: 0;
             left: 0;
-            background-image: url("./images/3.jpg");
+            background-image: url("../images/3.jpg");
             background-size: cover;
             background-position:center ;
 
@@ -151,6 +151,7 @@
             overflow:auto;
             /*火狐去掉滚动条*/
             scrollbar-width: none;
+            margin-top: 90px;
         }
         
         .demo1::-webkit-scrollbar {
