--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -47,7 +47,7 @@
             bottom: 0;
             left: 0;
             /*background:#a4daff ;*/
-            background-image: url("./images/3.jpg");
+            background-image: url("../images/3.jpg");
             background-size: cover;
             background-position:center ;
 
@@ -142,6 +142,7 @@
             height: 100%;
             overflow: hidden;
             margin: auto;
+            margin-top: 90px;
         }
         
         .demo1 {
