增加内容跟修改模板

--- a/blogger/mulu/linux常用指令/index.html
+++ b/blogger/mulu/linux常用指令/index.html
@@ -322,10 +322,10 @@
                 </div>
 
                 <div>
-                    <ul class="daohang">
+                   <ul class="daohang">
 
                         <li>
-                            <a href="../关于我/guanyu.html">关于</a>
+                            <a href="../关于我/guanyu.html">关于我</a>
                         </li>
 
                         <li>
@@ -337,12 +337,9 @@
                         </li>
 
                         <li>
-                            <a href="../文章/article.html">文章</a>
+                            <a href="../首页/shouye.html">首页</a>
                         </li>
 
-                        <li>
-                            <a href="../shouye.html">首页</a>
-                        </li>
 
                     </ul>
                 </div>
@@ -572,7 +569,7 @@
                     </ul>
 
                     <div class="tsxi-01">
-                        <a href="../文章/article.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                        <a href="../首页/shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                     </div>
 
