--- a/blogger/mulu/压力测试/ylce.html
+++ b/blogger/mulu/压力测试/ylce.html
@@ -341,8 +341,8 @@
                 <div>
                     <ul class="daohang">
 
-                       <li>
-                            <a href="../关于我/guanyu.html">关于</a>
+                        <li>
+                            <a href="../关于我/guanyu.html">关于我</a>
                         </li>
 
                         <li>
@@ -354,11 +354,7 @@
                         </li>
 
                         <li>
-                            <a href="../文章/article.html">文章</a>
-                        </li>
-
-                        <li>
-                            <a href="../shouye.html">首页</a>
+                            <a href="../首页/shouye.html">首页</a>
                         </li>
 
 
@@ -505,7 +501,7 @@
 
 
                 <div class="tsxi-01">
-                    <a href="../文章/article.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                    <a href="../首页/shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                 </div>
 
