--- a/blogger/mulu/留言/liuyan.html
+++ b/blogger/mulu/留言/liuyan.html
@@ -262,10 +262,10 @@
                 </div>
 
                 <div>
-                    <ul class="daohang">
+                  <ul class="daohang">
 
                         <li>
-                            <a href="../关于我/guanyu.html">关于</a>
+                            <a href="../关于我/guanyu.html">关于我</a>
                         </li>
 
                         <li>
@@ -277,11 +277,7 @@
                         </li>
 
                         <li>
-                            <a href="../文章/article.html">文章</a>
-                        </li>
-
-                        <li>
-                            <a href="../shouye.html">首页</a>
+                            <a href="../首页/shouye.html">首页</a>
                         </li>
 
                     </ul>
