--- a/blogger/mulu/http协议内容/http.html
+++ b/blogger/mulu/http协议内容/http.html
@@ -337,7 +337,7 @@
                     <ul class="daohang">
 
                         <li>
-                            <a href="../关于我/guanyu.html">关于</a>
+                            <a href="../关于我/guanyu.html">关于我</a>
                         </li>
 
                         <li>
@@ -349,13 +349,8 @@
                         </li>
 
                         <li>
-                            <a href="../文章/article.html">文章</a>
+                            <a href="../首页/shouye.html">首页</a>
                         </li>
-
-                        <li>
-                            <a href="../shouye.html">首页</a>
-                        </li>
-
 
                     </ul>
                 </div>
@@ -573,7 +568,7 @@
 
 
                     <div class="tsxi-01">
-                        <a href="../文章/article.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                        <a href="../首页/shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                     </div>
                 </div>
