--- a/blogger/mulu/动态/dongtai.html
+++ b/blogger/mulu/动态/dongtai.html
@@ -226,8 +226,9 @@
 
                 <div>
                     <ul class="daohang">
+
                         <li>
-                            <a href="../关于我/guanyu.html">关于</a>
+                            <a href="../关于我/guanyu.html">关于我</a>
                         </li>
 
                         <li>
@@ -239,13 +240,8 @@
                         </li>
 
                         <li>
-                            <a href="../文章/article.html">文章</a>
+                            <a href="../首页/shouye.html">首页</a>
                         </li>
-
-                        <li>
-                            <a href="../shouye.html">首页</a>
-                        </li>
-
 
                     </ul>
                 </div>
