--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -340,7 +340,7 @@
                     <ul class="daohang">
 
                         <li>
-                            <a href="../关于我/guanyu.html">关于</a>
+                            <a href="../关于我/guanyu.html">关于我</a>
                         </li>
 
                         <li>
@@ -352,12 +352,9 @@
                         </li>
 
                         <li>
-                            <a href="../文章/article.html">文章</a>
+                            <a href="../首页/shouye.html">首页</a>
                         </li>
 
-                        <li>
-                            <a href="../shouye.html">首页</a>
-                        </li>
 
                     </ul>
                 </div>
@@ -523,7 +520,7 @@
 
 
                     <div class="tsxi-01">
-                        <a href="../文章/article.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                        <a href="../首页/shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                     </div>
 
