增加内容跟修改模板

--- a/blogger/mulu/压力测试/ylce.html
+++ b/blogger/mulu/压力测试/ylce.html
@@ -354,7 +354,7 @@
                         </li>
 
                         <li>
-                            <a href="../首页/shouye.html">首页</a>
+                            <a href="../home/shouye.html">首页</a>
                         </li>
 
 
@@ -501,7 +501,7 @@
 
 
                 <div class="tsxi-01">
-                    <a href="../首页/shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                    <a href="../shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                 </div>
 
