--- a/blogger/mulu/常见的黑盒测试方法/index.html
+++ b/blogger/mulu/常见的黑盒测试方法/index.html
@@ -336,7 +336,7 @@
                         </li>
 
                         <li>
-                            <a href="../首页/shouye.html">首页</a>
+                            <a href="../shouye.html">首页</a>
                         </li>
 
 
@@ -566,7 +566,7 @@
                     </ul>
 
                     <div class="tsxi-01">
-                        <a href="../首页/shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                        <a href="../shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                     </div>
 
