--- a/blogger/mulu/易用性测试/yiyongx.html
+++ b/blogger/mulu/易用性测试/yiyongx.html
@@ -352,7 +352,7 @@
                         </li>
 
                         <li>
-                            <a href="../首页/shouye.html">首页</a>
+                            <a href="../shouye.html">首页</a>
                         </li>
 
 
@@ -520,7 +520,7 @@
 
 
                     <div class="tsxi-01">
-                        <a href="../首页/shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
+                        <a href="../shouye.html"><span>友情提示:</span>本章已看完，点击返回文章首页哦</a>
 
                     </div>
 
