--- a/blogger/mulu/留言/liuyan.html
+++ b/blogger/mulu/留言/liuyan.html
@@ -277,7 +277,7 @@
                         </li>
 
                         <li>
-                            <a href="../首页/shouye.html">首页</a>
+                            <a href="../shouye.html">首页</a>
                         </li>
 
                     </ul>
