增加内容跟修改模板

--- a/blogger/mulu/http协议内容/http.html
+++ b/blogger/mulu/http协议内容/http.html
@@ -341,6 +341,11 @@
                         </li>
 
                         <li>
+                            <a href="../博客日志/index.html">博客日记</a>
+                         </li>
+
+
+                        <li>
                             <a href="../留言/liuyan.html">留言板</a>
                         </li>
 
