--- a/blogger/mulu/linux常用指令/index.html
+++ b/blogger/mulu/linux常用指令/index.html
@@ -166,7 +166,7 @@
         
         .titer-01 {
             position: relative;
-            width: 1280px;
+            max-width: 1280px;
             height: 85px;
             line-height: 30px;
             padding: 5px 130px 5px 0;
@@ -327,6 +327,11 @@
                         <li>
                             <a href="../关于我/guanyu.html">关于我</a>
                         </li>
+
+                       <li>
+                            <a href="../博客日志/index.html">博客日记</a>
+                         </li>
+
 
                         <li>
                             <a href="../留言/liuyan.html">留言板</a>
