--- a/blogger/mulu/关于我/guanyu.html
+++ b/blogger/mulu/关于我/guanyu.html
@@ -206,6 +206,11 @@
                             <a href="../关于我/guanyu.html">关于我</a>
                         </li>
 
+                       <li>
+                            <a href="../博客日志/index.html">博客日记</a>
+                         </li>
+
+
                         <li>
                             <a href="../留言/liuyan.html">留言板</a>
                         </li>
