增加内容跟修改模板

--- a/blogger/mulu/关于我/guanyu.html
+++ b/blogger/mulu/关于我/guanyu.html
@@ -241,7 +241,7 @@
                 <p>
                     <span>昵称：从小就疯了</span>
                     <br><span>职业：软件测试</span>
-                    <br><span>运用技术：纯手写scc  html  JavaScript</span>
+                    <br><span>运用技术：scc  html  JavaScript</span>
                     <br><span>服务器：阿里云 Ubuntu  18.04 64位</span>
                     <br><span>用途：学习心得记录。</span>
                 </p>
